HUB-9174: Fix tests
HUB-9174 (Display space explorer sidebar in browser)